base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-first-app
  labels:
    app: my-first-app
spec:
  selector:
    app: my-first-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
