base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-first-app
spec:
  ingressClassName: nginx
  rules:
    - http:              # sin "host": acepta cualquier host, útil para pruebas locales
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-first-app
                port:
                  number: 80
